test_scripts/errors/undefined_in_call.shm
fn greet(name) {
    print(name);
}

greet(unknown);
