test_scripts/errors/undefined_in_call.stderr
 3 | }
 4 | 
 5 | greet(unknown);
           ^^^^^^^
Error: Unknown identifier "unknown"
